# cmake-demo

./: CMakeLists.txt  Version.hpp
3th-party/: CMakeLists.txt
3th-party/jsoncpp/: CMakeLists.txt
3th-party/protobuf/: CMakeLists.txt
apps/: CMakeLists.txt
apps/demoapp/src/: CMakeLists.txt  DemoApp.cpp
apps/hello/: CMakeLists.txt
apps/hello/src/: CMakeLists.txt  Hello.cpp
cmake/: ABCToolchain.cmake  Add3thPartyModules.cmake  BuildType.cmake  MakeModulePaths.cmake  X86Toolchain.cmake
common/: CMakeLists.txt
common/arithm/: CMakeLists.txt
common/arithm/example/: ArithmExample.cpp  CMakeLists.txt
common/arithm/include/: Arithm.hpp
common/arithm/src/: Arithm.cpp  CMakeLists.txt
common/arithm/test/: ArithmTest.cpp  CMakeLists.txt
common/mymath/: CMakeLists.txt
common/mymath/example/: CMakeLists.txt  MyMathExample.cpp
common/mymath/include/: MyMath.hpp
common/mymath/src/: CMakeLists.txt  MyMath.cpp
common/mymath/test/: CMakeLists.txt  Main.cpp  MyMathTest.cpp
scripts/: CMakeLists.txt  start.sh
